# climate_change_austria

./: .gitignore  README.md  data_load_pipeline.py  docker-compose.yml  test_api_call.py
app/: Dockerfile  data.duckdb  data_load_pipeline.py  main.py  pyproject.toml  tailwind.config.js
app/templates/: index.html
